Add Search feature

--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@
             <label for="shopping-list-entry">Add an item</label>
             <input type="text" name="shopping-list-entry" class="js-shopping-list-entry" placeholder="e.g., broccoli">
             <button type="submit">Add item</button>
-        </form>
-        <ul class="shopping-list js-shopping-list">
+            <br>
+            <label for="shopping-list-search">Find an item</label>
+            <input type="text" name="shopping-list-search" class="js-shopping-list-search" placeholder="e.g., carrot">
+            <button type="search">Find item</button>
+         </form>
+         <ul class="shopping-list js-shopping-list">
         </ul>
     </div>
     <script src="//code.jquery.com/jquery.min.js"></script>
