--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
             <label for="shopping-list-entry">Add an item</label>
             <input type="text" name="shopping-list-entry" class="js-shopping-list-entry" placeholder="e.g., broccoli">
             <button type="submit">Add item</button>
-            <br>
-            <label for="shopping-list-search">Find an item</label>
+        </form>
+         <form id="js-shopping-list-search">
+             <label for="shopping-list-search">Find an item</label>
             <input type="text" name="shopping-list-search" class="js-shopping-list-search" placeholder="e.g., carrot">
             <button type="search">Find item</button>
          </form>
+
          <ul class="shopping-list js-shopping-list">
         </ul>
     </div>
