Add hide compelted filter

--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
             <input type="text" name="shopping-list-search" class="js-shopping-list-search" placeholder="e.g., carrot">
             <button type="search">Find item</button>
          </form>
-
+         <form>
+           <label for="filter">Hide completed items</label>
+         <input type=checkbox id="hide-completed">
+         </form>
          <ul class="shopping-list js-shopping-list">
         </ul>
     </div>
